# openad-mcp-templates

./: LICENSE  README.md
Examples/mcp-bmfm/: README.md  compose.yaml  entrypoint.sh  pyproject.toml
Examples/mcp-bmfm/src/mcp_server_infer/: server.py  test.py  test.txt
Examples/mcp-smi-ted/: Dockerfile  compose.yaml  pyproject.toml  startup.sh
Examples/mcp-smi-ted/src/mcp_server_infer/: README.md  __main__.py  process_creds.py  server.py  test.py
mcp-template/: Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
mcp-template/src/mcp_server_infer/: __init__.py  server.py
